# copilot-sdk

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG_PLUGINS.md  CONTRIBUTING.md  PLUGIN_SYSTEM.md  README.md  TEST_RESULTS.md  changebundle.md  dev-caveats.md  gaps.md  justfile
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yaml-@6691tmr  lsp.json
.jules/: bolt.md
1682-java-tool-ergonomics-prompts-remove-before-merge/: #20260616-prompts.md#  #dd-3018003-ignorance-reduction-for-implementation-plan.md#  .#20260616-prompts.md  1682-low-level-tool-definition.md  20260615-prompts.md  20260616-prompts.md  20260617-prompts.md  20260618-prompts.md  20260622-prompts.md  20260623-prompts.md  20260624-prompts.md  add-tests-that-use-low_level_tool_definition.yaml.md  dd-3018003-ignorance-reduction-for-implementation-plan.md
1810-java-tool-ergonomics-tool-as-lambda-remove-before-merge/: 1810-ignorance-reduction-for-implementation-plan.md  20260626-prompts.md  20260628-prompts.md  20260629-prompts.md  20260630-prompts.md  20260701-prompts.md  shepherd-task.ps1  shepherd-task.sh
1917-java-embed-rust-cli-runtime-remove-before-merge/: 1917-embed-cli-runtime-ignorance-reduction-plan.md  20260706-prompts.md  20260710-prompts.md  20260721-prompts.md  20260722-prompts-3_1-and-3_2-gaps.md  20260722-prompts.md  20260723-prompts.md  djl_temp.txt  djl_temp2.txt  djl_temp3.txt  djl_temp4.txt  supply-chain-security-to-stephentoub.md
80-java-monorepo-add-01-remove-before-merge/: 20260512-prompts.md  20260513-prompts.md  20260515-prompts.md  20260518-prompts.md  20260519-java-sdk-tests-review.md  20260519-prompts.md  20260520-prompts.md  20260525-copilot-sdk-1423-plan.md  20260526-add-java-to-docs-validation-plan.md  20260526-prompts.md  20260527-prompts.md  20260601-manual-merge-prompt.md  dd-2989727-move-java-to-monorepo-plan.md  dd-2997995-phase-1-plan.md  dd-2998002-make-the-monorepo-smart-about-java-plan.md  dd-3001051-phase-2-plan.md  dd-3001935-phase-03-plan.md  dd-3007546-agentic-fix-cli-upgrade-related-breakage-plan.md  dd-3007546-phase-04-grader.md  dd-3007546-phase-04-plan.md  dd-3007546-prompt-to-generate-phase-04-plan.md  dd-3012759-post-migration-checklist.md  ghcp-sp-95-branch-protection-findings-01.md  ghcp-sp-95-enable-java-branch-protection.ps1  ghcpsp-90-gpg-key-archive.sh  ghcpsp-90-gpg-key-import.sh  phase-one-lane-validation.md  phase-two-lanes-agentic-fix-validation.md  phase-two-lanes-manual-fix-validation.md
cookbook/: README.md
dd-3012834-remove-before-merge/: 20260606-prompts.md  dd-3012835-plan-to-implement-CopilotExperimental.md  dd-3012835-sketch.md
demos/: README.md
docs/: .gitignore  README.md  compatibility.md  core-concepts.md  custom-agents.md  debugging.md  getting-started.md  index.md  mcp-usage.md  mcp.md  opentelemetry-instrumentation.md
dotnet/: Directory.Build.props  Directory.Packages.props  README.md  dotnet-tools.json
ghcp-sdk-1893-remove-before-merge/: 20260707-prompts.md
go/: README.md  canvas.go  go.mod  (+33 more)
rust/: .gitignore  .parity_node.txt  CHANGELOG.md  Cargo.toml  PUBLIC_API.txt  README.md  RELEASING.md  build.rs  release-plz.toml
rust/docs/adr/: 0001-session-fs-provider.md  README.md
rust/e2e/: client_test.rs  mod.rs
rust/e2e/testharness/: context.rs  mod.rs
rust/examples/: basic.rs  basic_example.rs  chat.rs  first_response_benchmark.rs  hello.rs  hooks.rs  lifecycle_observer.rs  manual_tool_resume.rs  mcp.rs  permissions.rs  session_fs.rs  tool_server.rs  tools.rs
rust/scripts/: snapshot-bundled-cli-version.sh  snapshot-bundled-in-process-version.sh  write-cli-shas.sh
rust/src/: canvas.rs  canvas_dispatch.rs  client.rs  copilot_request_handler.rs  duration_serde.rs  embeddedcli.rs  error.rs  errors.rs  ffi.rs  github_telemetry.rs  handler.rs  hooks.rs  jsonrpc.rs  lib.rs  llm_inference.rs  llm_inference_dispatch.rs  llm_request_handler.rs  mode.rs  permission.rs  provider_token.rs  provider_token_dispatch.rs  resolve.rs  router.rs  rpc.rs  sdk_protocol_version.rs  session.rs  session_events.rs  session_fs.rs  session_fs_dispatch.rs  startup_timings.rs  subscription.rs  surrogate_safe.rs  tool.rs  tools.rs  trace_context.rs  transforms.rs  types.rs  wire.rs
rust/tests/: api_types_test.rs  cli_resolution_test.rs  e2e.rs  integration_test.rs  jsonrpc_test.rs  jsonrpc_tests.rs  managed_settings_test.rs  mode_handlers_e2e_test.rs  protocol_version_test.rs  session_test.rs  tools_tests.rs  types_tests.rs
rust/tests/e2e/: abort.rs  ask_user.rs  builtin_tools.rs  byok_bearer_token_provider.rs  canvas.rs  client.rs  client_lifecycle.rs  client_options.rs  commands.rs  compaction.rs  copilot_request_handler.rs  elicitation.rs  error_resilience.rs  event_fidelity.rs  github_telemetry.rs  hooks.rs  hooks_extended.rs  inprocess.rs  llm_inference.rs  mcp_and_agents.rs  mcp_oauth.rs  mode_empty.rs  mode_handlers.rs  multi_client.rs  multi_client_commands_elicitation.rs  multi_provider_registry.rs  multi_turn.rs  pending_work_resume.rs  per_session_auth.rs  permissions.rs  pre_mcp_tool_call_hook.rs  provider_endpoint.rs  rpc_additional_edge_cases.rs  rpc_agent.rs  rpc_event_log.rs  rpc_event_side_effects.rs  rpc_extensions_loaded.rs  rpc_mcp_and_skills.rs  rpc_mcp_config.rs  rpc_mcp_lifecycle.rs  (+26 more)
test/scenarios/auth/byok-anthropic/rust/: Cargo.toml  main.rs
test/scenarios/callbacks/user-input/rust/: Cargo.toml  main.rs
test/scenarios/callbacks/user-input/rust/src/: main.rs
test/scenarios/prompts/reasoning-effort/rust/: Cargo.toml  main.rs
test/scenarios/prompts/reasoning-effort/rust/src/: main.rs
test/scenarios/prompts/system-message/rust/: Cargo.toml  main.rs
test/scenarios/prompts/system-message/rust/src/: main.rs
test/scenarios/tools/tool-filtering/rust/: Cargo.toml  main.rs
test/scenarios/tools/tool-filtering/rust/src/: main.rs
test/scenarios/tools/tool-overrides/rust/: Cargo.toml  main.rs
test/scenarios/tools/tool-overrides/rust/src/: main.rs
test/scenarios/tools/virtual-filesystem/rust/: Cargo.toml  main.rs
(+2088 files in other folders)
