[package]
name = "scenario-byok-anthropic"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "scenario-byok-anthropic"
path = "main.rs"

[dependencies]
copilot = { package = "copilot-sdk", path = "../../../../../rust" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
