[package]
name = "scenario-reasoning-effort"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "scenario-reasoning-effort"
path = "main.rs"

[dependencies]
copilot = { package = "copilot-sdk", path = "../../../../../rust" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
