[package]
name = "scenario-system-message"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "scenario-system-message"
path = "main.rs"

[dependencies]
copilot = { package = "copilot-sdk", path = "../../../../../rust" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
