[package]
name = "scenario-tool-overrides"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "scenario-tool-overrides"
path = "main.rs"

[dependencies]
copilot = { package = "copilot-sdk", path = "../../../../../rust" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
