[package]
name = "scenario-virtual-filesystem"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "scenario-virtual-filesystem"
path = "main.rs"

[dependencies]
copilot = { package = "copilot-sdk", path = "../../../../../rust" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
parking_lot = "0.12"
